--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "@reduxjs/toolkit": "^2.2.3",
     "antd": "^5.18.2",
     "react": "^18.2.0",
+    "react-avatar-editor": "^13.0.2",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.0.1",
+    "react-icons": "^5.3.0",
     "react-modal": "^3.16.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.0",
     "react-toastify": "^10.0.5",
+    "uuid": "^11.0.3",
     "yup": "^1.4.0"
   },
   "devDependencies": {
